fix white space (test2)

--- a/bodydough-app/src/app/globals.css
+++ b/bodydough-app/src/app/globals.css
@@ -26,7 +26,7 @@ body {
     rgb(var(--background-start-rgb));*/
     padding: 0;
     margin: 0;
-    max-height: 100%;
+    height: 100vh;
     overflow-x: auto;
     overflow-y: auto;
     scrollbar-track-color: transparent;
